# qa-python-test-automation

./: .env_example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
01_lesson/: lesson_1_task_1.py  lesson_1_task_2.py  lesson_1_task_3.py  lesson_1_task_5.py
02_lesson/: README.md  lesson_2_task_2.py  lesson_2_task_3.py  lesson_2_task_4.py  lesson_2_task_5.py  lesson_2_task_6.py  lesson_2_task_7.py
03_lesson/: README.md  address.py  lesson_3_task_1.py  lesson_3_task_2.py  lesson_3_task_3.py  mailing.py  smartphone.py  user.py
04_lesson/: README.md  defects.md  string_utils_test.py
05_lesson/: button_click_without_id.py
05_lesson/firefox/: auth_form.py  input_field.py  modal_window.py
05_lesson/google/: button_click.py  button_click_with_css_class.py  button_click_without_id.py
06K_lesson/: test_01_form.py  test_02_calc.py  test_03_shop.py
06_lesson/: click_on_button.py  rename_button.py  wait_for_picture.py
lesson_07/calculator_pages/: main_page.py
lesson_07/form_pages/: form_page.py  form_page_enum_selectors.py  main_page.py
lesson_07/online_store_pages/: checkout_page.py  items_page.py  login_page.py  main_page.py
lesson_07/tests/: conftest.py  test_form_page.py  (+2 more)
lesson_09/: student.py  test_student_db.py
lesson_practice/: add_cookie.py  current_url.py  different_browsers.py  docs.md  explicity_wait.py  find_element_vs_find_elements.py  find_elements.py  get_title.py  implicity_wait.py  is_displayed_elements.py  is_enabled_elements.py  is_selected_elements.py  labirint.py  main.py  window_size.py
pytest_cases/: README.md
(+22 files in other folders)
